# dossier

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  NOTICE  PROVENANCE.md  README.md  pyproject.toml
src/dossier/: __init__.py  batch.py  check.py  cli.py  git.py  ingest.py  scan.py  store.py
tests/: test_batch.py  test_check.py  test_ingest.py  test_scan.py  test_store.py
