[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dossier"
version = "0.1.0"
description = "Code review forensics: detect mechanical failures in review process"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "James Beck" }]
dependencies = ["click>=8.0"]

[project.scripts]
dossier = "dossier.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
